# docs/swagger.yaml
@@ -119,6 +119,13 @@ definitions:
       name:
         type: string
     type: object
+  http.categoryResp:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   http.createCategoryReq:
     properties:
       description:
@@ -217,6 +224,34 @@ definitions:
         type: string
       new_refresh_token:
         type: string
+    type: object
+  http.getAllProductsResp:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/http.getAllProductsRespItem'
+        type: array
+      meta:
+        $ref: '#/definitions/internal_shop_delivery_http.listMetaResponse'
+    type: object
+  http.getAllProductsRespItem:
+    properties:
+      categories:
+        items:
+          $ref: '#/definitions/http.categoryResp'
+        type: array
+      id:
+        type: string
+      images:
+        items:
+          $ref: '#/definitions/http.mediaResp'
+        type: array
+      inventory:
+        $ref: '#/definitions/http.inventoryResp'
+      name:
+        type: string
+      shop:
+        $ref: '#/definitions/http.shopResp'
     type: object
   http.getCartResponse:
     properties:
@@ -317,6 +352,11 @@ definitions:
       stock_level:
         type: integer
     type: object
+  http.inventoryResp:
+    properties:
+      id:
+        type: string
+    type: object
   http.listCategoryResponse:
     properties:
       categories:
@@ -345,6 +385,13 @@ definitions:
       shop_id:
         type: string
     type: object
+  http.mediaResp:
+    properties:
+      media_id:
+        type: string
+      url:
+        type: string
+    type: object
   http.productResponse:
     properties:
       id:
@@ -368,6 +415,21 @@ definitions:
       id:
         type: string
       name:
+        type: string
+    type: object
+  http.shopResp:
+    properties:
+      city:
+        type: string
+      district:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+      street:
         type: string
     type: object
   http.shopResponse:
@@ -534,34 +596,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/admin:
-    get:
-      consumes:
-      - application/json
-      description: get cate by name or ids , if both are not present , return all
-        categories
-      parameters:
-      - collectionFormat: csv
-        description: ids
-        in: query
-        items:
-          type: string
-        name: ids
-        type: array
-      - description: name
-        in: query
-        name: name
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/http.listCategoryResponse'
-      summary: get cate by name or ids , if both are not present , return all categories
-      tags:
-      - Admin
   /api/v1/admin/categories:
     post:
       consumes:
@@ -713,6 +747,34 @@ paths:
       summary: Get cart
       tags:
       - Cart
+  /api/v1/categories:
+    get:
+      consumes:
+      - application/json
+      description: get cate by name or ids , if both are not present , return all
+        categories
+      parameters:
+      - collectionFormat: csv
+        description: ids
+        in: query
+        items:
+          type: string
+        name: ids
+        type: array
+      - description: name
+        in: query
+        name: name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.listCategoryResponse'
+      summary: get cate by name or ids , if both are not present , return all categories
+      tags:
+      - categories
   /api/v1/media:
     post:
       consumes:
@@ -1199,6 +1261,29 @@ paths:
       summary: get shop detail by their id
       tags:
       - Products
+  /api/v1/shops/products/all:
+    get:
+      consumes:
+      - application/json
+      description: Get all products
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.getAllProductsResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Resp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Resp'
+      summary: Get all products
+      tags:
+      - Shop
   /api/v1/shops/products/delete:
     delete:
       consumes:
